--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "docker exec -i pp_laravel_app php vendor/bin/phpstan analyse app --level=max",
     "format": "docker exec -i pp_laravel_app php vendor/bin/pint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "quality": "npm run format && npm run lint && npm run test",
+    "test": "docker exec -i pp_laravel_app php artisan test"
   },
   "repository": {
     "type": "git",
