--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,25 @@
+# Laravel
+/vendor/
+/storage/
+/bootstrap/cache/
 .env
 **/.env
+.phpunit.result.cache
+
+# Docker
+docker-compose.override.yml
+docker-compose.local.yml
+*.pid
+*.sock
+
+# Node.js / Vite
+/node_modules/
+/dist/
+/dist-ssr/
+/*.local
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -10,18 +27,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
+# IDE / Editor configs
+.vscode/
 !.vscode/extensions.json
-.idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS / Misc
+Thumbs.db
+ehthumbs.db
+*.iml
