fix: repair l5swagger bugs ss-010

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,10 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+     location /docs/asset/ {
+        alias /var/www/public/docs/asset/;
+    }
+
     # PHP-FPM handling
     location ~ \.php$ {
         include fastcgi_params;
