--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   laravel:
     build:
       context: ./laravel
-      dockerfile: ./docker/Dockerfile
+      dockerfile: /docker/Dockerfile
     container_name: pp_laravel_app
     restart: unless-stopped
     working_dir: /var/www
