fix: missing icon ss-015 (#19)
* fix: fix errors in swagger template ss-012

* fix: fix default icon ss-015

* feat: create config helper and config/games ss-015

* refactor: improve ConfigHelper logic ss-015

* chore: fix docker file path ss-015

* refactor: improve Game model code ss-015

* refactor: make the ConfigHelper method static ss-015

* refactor: remove registration of HelpersServiceProvider ss-015

* fix: repair docker config ss-015

* fix: repair docker config ss-015

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     working_dir: /var/www
     volumes:
       - ./laravel:/var/www
+      - ./laravel/storage:/var/www/storage
       - vendor_data:/var/www/vendor
-      - laravel_storage:/var/www/storage
     networks:
       - app-network
     depends_on:
@@ -48,7 +48,6 @@ services:
 volumes:
   mysql_data:
   vendor_data:
-  laravel_storage:
 
 networks:
   app-network:
