--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
+        "deeplcom/deepl-php": "^1.16",
         "doctrine/dbal": "^3.10",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "openai-php/client": "^0.18.0",
         "spatie/laravel-translatable": "^6.0"
     },
     "require-dev": {
@@ -68,7 +70,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
