feat: implement OpenAiProvider ss-044

--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -58,5 +58,8 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 OPENAI_API_KEY=
+OPENAI_TRANSLATION_MODEL=gpt-4o-mini
+OPENAI_TTS_MODEL=tts-1
+OPENAI_TTS_VOICE=alloy
 
 DEEPL_API_KEY=
